--- a/allPowerful/core/templates/dashboard.html
+++ b/allPowerful/core/templates/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Do Any Things | Dashboard{% endblock %}
+{% block title %}Dashboard{% endblock %}
 {% block content %}
     Welcome to This world!
 {% endblock %}
