[Do] Config foreman start and improve ui.

--- a/allPowerful/core/templates/dashboard.html
+++ b/allPowerful/core/templates/dashboard.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
-    Welcome to This world!
+    <img src="../static/image/Dashboard.jpg"/>
+    <div class="row">
+        <div class="span5">这里是公告栏</div>
+        <div class="span5">这里是新闻栏</div>
+    </div>
 {% endblock %}
