--- a/allPowerful/core/templates/index.html
+++ b/allPowerful/core/templates/index.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
+<div class="container" id="container">
     <img src="../static/image/Dashboard.jpg"/>
     <div class="row">
         <div class="span5">这里是公告栏</div>
         <div class="span5">这里是新闻栏</div>
     </div>
+</div>
 {% endblock %}
