--- a/allPowerful/core/templates/login.html
+++ b/allPowerful/core/templates/login.html
@@ -1,7 +1,49 @@
 {% extends "base.html" %}
-{% block title %}Login{% endblock %}
+{% block title %} 早餐网 | 登录页面 {% endblock %}
+
 {% block content %}
 
-This is Login Page......
+<div id="login" class="container">
+
+    <div id="login-section" class="section section-large">
+        <div class="section-header">
+            <h3> 登录早餐网 </h3>
+
+        </div>
+        <div class="section-content">
+            {% if errors %}
+            <div class="alert alert-error">{{ errors }}</div>
+            {% endif %}
+            <div id="login_tips"></div>
+            <form method="post" action="{% url 'login' %}" accept-charset="UTF-8">
+                {% csrf_token %}
+                <div class="row-fluid">
+                    <label for="username">用户名</label>
+                    {{ formLogin.username }}
+                    <!--<input id="username" class="span12" type="text" size="30" name="username">-->
+                    <label for="password">密码</label>
+                    {{ formLogin.password }}
+                    <!--<input id="password" class="span12" type="password" size="30" name="password">-->
+
+                    <p class="help-block">
+                        <i class="icon-user"></i>
+                        <a href="{% url 'reset_password' %}">忘记密码?</a>
+                    </p>
+                </div>
+                <div class="form-actions">
+                    <div class="row">
+                        <div class="span2" style="width:65px">
+                            <input class="btn btn-primary" type="submit" value="登录" name="commit">
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+
+</script>
 
 {% endblock %}
