[Do] - Finish many functions for this post.

--- a/allPowerful/core/templates/index.html
+++ b/allPowerful/core/templates/index.html
@@ -21,27 +21,30 @@
     </div>
     <div class="row">
         <div class="span6">
-            最热水果:
-            <div>
-                <img src="http://a4.att.hudong.com/11/62/19300001237669130559621227442.jpg">
-                Apple
-            </div>
-            <div>
-                <img src="http://a4.att.hudong.com/11/62/19300001237669130559621227442.jpg">
-                Apple
-            </div>
-            <div>
-                <img src="http://a4.att.hudong.com/11/62/19300001237669130559621227442.jpg">
-                Apple
-            </div>
-            <div>
-                <img src="http://a4.att.hudong.com/11/62/19300001237669130559621227442.jpg">
-                Apple
-            </div>
-            <div>
-                <img src="http://a4.att.hudong.com/11/62/19300001237669130559621227442.jpg">
-                Apple
-            </div>
+            <fieldset>
+                <legend>最热水果:</legend>
+                <div>
+                    <img src="http://a4.att.hudong.com/11/62/19300001237669130559621227442.jpg">
+                    <span style="margin-left: 20px;font:bold">苹果</span>
+                    <span>这个苹果很好吃</span>
+                </div>
+                <div>
+                    <img src="http://a4.att.hudong.com/11/62/19300001237669130559621227442.jpg">
+                    Apple
+                </div>
+                <div>
+                    <img src="http://a4.att.hudong.com/11/62/19300001237669130559621227442.jpg">
+                    Apple
+                </div>
+                <div>
+                    <img src="http://a4.att.hudong.com/11/62/19300001237669130559621227442.jpg">
+                    Apple
+                </div>
+                <div>
+                    <img src="http://a4.att.hudong.com/11/62/19300001237669130559621227442.jpg">
+                    Apple
+                </div>
+            </fieldset>
         </div>
         <div class="span6">
             最热早餐
