--- a/allPowerful/core/templates/base.html
+++ b/allPowerful/core/templates/base.html
@@ -5,7 +5,8 @@
         <title>{% block title %}{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="健康早餐">
-        <meta name="author" content="wade.huang">
+        <meta name="author" conte
+              nt="wade.huang">
         <script src="//cdnjs.bootcss.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <link href="//cdnjs.bootcss.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="/static/css/base.css" rel="stylesheet">
@@ -24,11 +25,11 @@
                                 <li {% if active == "dashboard" %}class="active" {% endif %}>
                                     <a href="/">首页</a>
                                 </li>
-                                <li class="">
-                                    <a href="" class="bootstro" data-bootstro-title="身和心必须有一个在路上" data-bootstro-placement="bottom" data-bootstro-step="0">营养早餐</a>
+                                <li {% if active == "breakfast" %}class="active" {% endif %}>
+                                    <a href="{% url 'item' 'breakfast' %}" class="bootstro" data-bootstro-title="身和心必须有一个在路上" data-bootstro-placement="bottom" data-bootstro-step="0">营养早餐</a>
                                 </li>
-                                <li class="">
-                                    <a href="" class="bootstro" data-bootstro-title="了解你朋友的状态。" data-bootstro-placement="bottom" data-bootstro-step="1">新鲜水果</a>
+                                <li {% if active == "fruit" %}class="active" {% endif %}>
+                                    <a href="{% url 'item' 'fruit' %}" class="bootstro" data-bootstro-title="了解你朋友的状态。" data-bootstro-placement="bottom" data-bootstro-step="1">新鲜水果</a>
                                 </li>
                                 <!--<li class="">-->
                                     <!--<a href="" class="bootstro" data-bootstro-title="在家靠父母,出门靠朋友" data-bootstro-placement="bottom" data-bootstro-step="2">朋友帮帮忙</a>-->
@@ -45,7 +46,8 @@
                                     <li><a href="{% url 'login' %}">登陆</a></li>
                                     <li><a href="{% url 'register' %}">注册</a></li>
                                 {% else %}
-                                    <li><a>Hi, {{ user.username }}</a></li>
+                                    <li><a href="{% url 'order_list' %}">我的订单</a></li>
+                                    <li><a href="{% url 'user_details' %}">Hi, {{ user.username }}</a></li>
                                     <li><a href="{% url 'logout' %}">退出</a></li>
                                 {% endif %}
                             </ul>
@@ -60,21 +62,21 @@
         {% endblock %}
 
         <!--底部容器-->
-        <footer class="footer">
+        <!--<footer class="footer">-->
         {% block footer %}
-            <div class="container">
-                <span><a href="#" target="_blank">关于程序猿</a></span>
-                <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-                <span><a href="#" target="_blank">问题反馈</a></span>
-                <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-                <span><a href="#" target="_blank">版本日志</a></span>
-                <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-                <span><a href="#" target="_blank">加入我们</a></span>
-                <div>
-                    <span>疯狂的程序猿:Wade.Huang</span>
-                </div>
-            </div>
+            <!--<div class="container">-->
+                <!--<span><a href="#" target="_blank">关于程序猿</a></span>-->
+                <!--<span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>-->
+                <!--<span><a href="#" target="_blank">问题反馈</a></span>-->
+                <!--<span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>-->
+                <!--<span><a href="#" target="_blank">版本日志</a></span>-->
+                <!--<span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>-->
+                <!--<span><a href="#" target="_blank">加入我们</a></span>-->
+                <!--<div>-->
+                    <!--<span>疯狂的程序猿:Wade.Huang</span>-->
+                <!--</div>-->
+            <!--</div>-->
         {% endblock %}
-        </footer>
+        <!--</footer>-->
     </body>
 </html>
