--- a/allPowerful/core/templates/base.html
+++ b/allPowerful/core/templates/base.html
@@ -8,7 +8,7 @@
         <meta name="author" conte
               nt="wade.huang">
         <script src="//cdnjs.bootcss.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <link href="//cdnjs.bootcss.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//cdn.bootcss.com/twitter-bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="/static/css/base.css" rel="stylesheet">
         <script src="/static/js/base.js"></script>
     </head>
